# tile_game

./: .gitignore  CMakeLists.txt  README.md
client/: connection.js  index.css  index.html  log.css  player.css  ui.js
scripts/: generate_vc.bat
src/: Game.hpp  GameCfg.hpp  Geodata.hpp  Object.hpp  ObjectManager.hpp  Server.hpp  World.hpp  build_config.hpp  events.hpp  math.hpp  types.hpp
src/server/: Connection.hpp  Menu.hpp  PacketBuilder.hpp  Server.hpp  conio.hpp
tests/: CMakeLists.txt  catch_wrap.hpp  test_printers.hpp  tests_main.cpp
tests/common/: test_printers.hpp
tests/regression/: TestClient.hpp  cast_lightning_tests.cpp  disconnect_tests.cpp  move_tests.cpp  spawn_tests.cpp  spell_harm_tests.cpp  spell_heal_tests.cpp  test_game_config.hpp
tests/regression_tests/: CMakeLists.txt  TestClient.hpp  spawn_tests.cpp  test_game_config.hpp
tests/unit/: math_tests.cpp
tests/unit_tests/: CMakeLists.txt  TestCanvas.hpp
